📝 docs: add cross-device link workaround for flash-attn on NFS

--- a/environment_glm_ocr.yml
+++ b/environment_glm_ocr.yml
@@ -42,6 +42,19 @@ dependencies:
 # Install FlashAttention (optional, GPU only):
 #   pip install flash-attn --no-build-isolation
 #
+#   IMPORTANT: On Kubeflow/NFS setups where pip cache and /tmp are on
+#   different filesystems, flash-attn build fails with "Invalid cross-device
+#   link". Fix permanently by adding TMPDIR to the env activation script:
+#
+#   mkdir -p $CONDA_PREFIX/etc/conda/activate.d $CONDA_PREFIX/tmp
+#   echo 'export TMPDIR=$CONDA_PREFIX/tmp' > $CONDA_PREFIX/etc/conda/activate.d/set_tmpdir.sh
+#
+#   Then install normally:
+#   pip install flash-attn --no-build-isolation
+#
+#   Or as a one-off:
+#   TMPDIR=/home/jovyan/.cache/pip/wheels pip install flash-attn --no-build-isolation
+#
 # Verify:
 #   python -c "import transformers; print(f'Transformers: {transformers.__version__}')"
 #   python -c "import torch; print(f'CUDA: {torch.cuda.is_available()}')"
