🐛 fix: add 'transaction summary' to BANK_STATEMENT detection mappings

--- a/prompts/document_type_detection.yaml
+++ b/prompts/document_type_detection.yaml
@@ -126,6 +126,7 @@ type_mappings:
   "creditcard statement": "BANK_STATEMENT"
   "statement": "BANK_STATEMENT"
   "monthly statement": "BANK_STATEMENT"
+  "transaction summary": "BANK_STATEMENT"
 
   # Travel expense variations
   "travel expense": "TRAVEL_EXPENSE"
