--- a/environment_glm_ocr.yml
+++ b/environment_glm_ocr.yml
@@ -21,6 +21,7 @@ dependencies:
     - pillow>=10.0.0
     - accelerate>=0.27.0
     - pyyaml>=6.0.0
+    - json-repair>=0.30.0
     - typer>=0.9.0
     - jupyter>=1.0.0
     - ipython>=8.0.0
